# portablecode

./: .gitignore
random_uuid_boost/: .clang-format  CMakeLists.txt  conan-android-profile.txt  conanfile.py  conanfile.txt  main.cpp  random_uuid.cpp  random_uuid.h  test_random_uuid.cpp
random_uuid_cpp/: CMakeLists.txt  README.md  main.cpp  test_random_uuid.cpp  uuid_linux.cpp  uuid_win.cpp
random_uuid_cpp_with_unitest/: random_uuid.h  uuid_linux.cpp  uuid_win.cpp
random_uuid_python/: .gitignore  random_uuid.py
strategy_by_build_script/: CMakeLists.txt  mcu_backend.cpp  mcu_backend.h  mqtt_backend.cpp
strategy_by_macro/: CMakeLists.txt  README.md  backend.h  main.cpp  mcu_backend.cpp  mcu_backend.h  mqtt_backend.cpp  mqtt_backend.h
strategy_chain/: CMakeLists.txt  backend.h  main.cpp  mcu_backend.cpp  mcu_backend.h  mqtt_backend.cpp  mqtt_backend.h
strategy_factory/: CMakeLists.txt  backend.cpp  backend.h  main.cpp  mcu_backend.cpp  mqtt_backend.cpp
